--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
     <link rel="shortcut icon" href="./icon.ico" type="image/x-icon">
     <title>Tic Tac Toe</title>
@@ -30,7 +31,14 @@
         <div class="text"></div>
         <button onclick="startGame()">Play again!</button>
     </div>
+    <div class="difficulty">
+        <p class="mb-0">Choose your game mode:</p>
+        <label>INTERMEDIATE<input class="mx-1" type="radio" value="intermediate" name="difficulty"></label>
+        <label>HARD<input class="mx-1" type="radio" value="hard" name="difficulty"></label>
+    </div>
+    <button onclick="startGame()">Restart game</button>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="./script.js"></script>
 </body>
 </html>
