--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <title>Tic Tac Toe</title>
 </head>
 <body>
+    <div class="difficulty">
+        <p class="mb-0">Choose your game mode:</p>
+        <label>INTERMEDIATE<input class="mx-1" type="radio" value="intermediate" name="difficulty" checked></label>
+        <label>HARD<input class="mx-1" type="radio" value="hard" name="difficulty"></label>
+    </div>
     <table>
         <tr>
             <td class="cell" id="0"></td>
@@ -31,12 +36,9 @@
         <div class="text"></div>
         <button onclick="startGame()">Play again!</button>
     </div>
-    <div class="difficulty">
-        <p class="mb-0">Choose your game mode:</p>
-        <label>INTERMEDIATE<input class="mx-1" type="radio" value="intermediate" name="difficulty"></label>
-        <label>HARD<input class="mx-1" type="radio" value="hard" name="difficulty"></label>
+    <div class="d-flex justify-content-center">
+        <button onclick="startGame()">Restart game</button>
     </div>
-    <button onclick="startGame()">Restart game</button>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="./script.js"></script>
