--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
-    <link rel="shortcut icon" href="./icon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/icon.ico" type="image/x-icon">
     <title>Tic Tac Toe</title>
 </head>
 <body>
@@ -33,7 +33,7 @@
         </tr>
     </table>
     <div class="endgame">
-        <div class="text"></div>
+        <div class="text mb-4"></div>
         <button onclick="startGame()">Play again!</button>
     </div>
     <div class="d-flex justify-content-center">
