feat: add easy mode

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
     <div class="difficulty">
         <p class="mb-0">Choose your game mode:</p>
-        <label class="text-success text-opacity-75">INTERMEDIATE<input class="mx-1" type="radio" value="intermediate" name="difficulty" checked></label>
+        <label class="text-primary">EASY<input class="mx-1" type="radio" value="easy" name="difficulty" checked></label>
+        <label class="text-success">INTERMEDIATE<input class="mx-1" type="radio" value="intermediate" name="difficulty" checked></label>
         <label class="text-danger">HARD<input class="mx-1" type="radio" value="hard" name="difficulty"></label>
     </div>
     <table>
