--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <body>
     <div class="difficulty">
         <p class="mb-0">Choose your game mode:</p>
-        <label class="text-primary">EASY 😺<input class="mx-1" type="radio" value="easy" name="difficulty" onclick="setDifficulty()"></label>
-        <label class="text-success">INTERMEDIATE 😼<input class="mx-1" type="radio" value="intermediate" name="difficulty" checked onclick="setDifficulty()"></label>
-        <label class="text-danger">HARD 😾<input class="mx-1" type="radio" value="hard" name="difficulty" onclick="setDifficulty()"></label>
+        <label class="text-primary">😺 EASY <input class="mx-1" type="radio" value="easy" name="difficulty" onclick="setDifficulty()"></label>
+        <label class="text-success">😼 INTERMEDIATE <input class="mx-1" type="radio" value="intermediate" name="difficulty" checked onclick="setDifficulty()"></label>
+        <label class="text-danger">😾 HARD <input class="mx-1" type="radio" value="hard" name="difficulty" onclick="setDifficulty()"></label>
     </div>
     <table>
         <tr>
