feat: background image

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="about d-flex flex-column align-items-center gap-2 text-center text-decoration-none">
-        <p class="mt-2 mb-0">The AI algorithm was made by Ahmad Abdolsaheb (Minimax)</p>
+        <p class="mt-2 mb-0">The hard difficulty AI algorithm was made by Ahmad Abdolsaheb (Minimax)</p>
         <p class="m-0">This game was made following this video:</p>
         <iframe width="320" height="200" src="https://www.youtube.com/embed/P2TcQ3h0ipQ?start=4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <a class="mb-4" href="./index.html"><button>Go back</button></a>
